<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.my.sample.fragments.LoginFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/baseline_person_add_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:text="@string/login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textviewFirst"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/phone"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/password"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center"
            android:text="@string/login" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

